# d4v2

./: CMakeLists.txt  CMakePresets.json  README.md
assets/cnfs/counting/: cnf12.sol
cmake/: FindBipe.cmake  FindFlowcutter.cmake  FindGMP.cmake  FindGMPXX.cmake  FindGlucose.cmake  FindPatoh.cmake  MD4Config.cmake.in  Testing.cmake  md4Config.cmake.in  run_counter_test.cmake  run_smoke_test.cmake
demo/compiler/src/: CompilerDemo.cpp  CompilerDemo.hpp  Main.cpp  ParseOption.hpp
demo/counter/: Makefile
demo/counter/src/: CounterDemo.cpp  CounterDemo.hpp  Main.cpp  ParseOption.cpp  ParseOption.hpp
demo/server/src/: ParseOption.hpp
include/md4/caching/: CacheList.hpp  CacheManager.hpp  CacheNoCollision.hpp
include/md4/caching/bucket/: BucketManager.hpp
include/md4/caching/cleaning/: CacheCleaningManager.hpp
include/md4/configurations/: Configuration.hpp  ConfigurationBranchingHeuristic.hpp  ConfigurationCache.hpp  ConfigurationDpllStyleMethod.hpp  ConfigurationEREMethod.hpp  ConfigurationFormulaManager.hpp  ConfigurationMaxSharpSatMethod.hpp  ConfigurationMinSharpSatMethod.hpp  ConfigurationPartialOrderHeuristic.hpp  ConfigurationPreproc.hpp  ConfigurationProjMcMethod.hpp  ConfigurationQbfCounter.hpp  ConfigurationSolver.hpp
include/md4/formulaManager/: FormulaManager.hpp
include/md4/formulaManager/circuit/: CircuitManager.hpp  CircuitWithCnfManager.hpp
include/md4/formulaManager/cnf/: CnfManager.hpp  CnfManagerDyn.hpp  CnfManagerDynBlockedCl.hpp  CnfManagerDynPure.hpp
include/md4/heuristics/branchingHeuristic/: BranchingHeuristic.hpp  BranchingHeuristicClassic.hpp
include/md4/heuristics/partialOrder/: PartialOrderHeuristic.hpp  PartialOrderHeuristicNone.hpp  PartialOrderHeuristicTreeDecomp.hpp
include/md4/heuristics/phaseSelection/: PhaseHeuristic.hpp  PhaseHeuristicPolarity.hpp
include/md4/heuristics/scoringVariable/: ScoringMethod.hpp
include/md4/methods/: Counter.hpp  CountingGlobalCache.hpp  CountingOperation.hpp  DataBranch.hpp  DecisionDNNFOperation.hpp  DpllStyleMethod.hpp  Erosion.hpp  ExistRandomExist.hpp  MaxSharpSAT.hpp  MethodManager.hpp  MinSharpSAT.hpp  OperationManager.hpp  ProjMCMethod.hpp  QbfCounter.hpp  QueryManager.hpp
include/md4/methods/nnf/: BinaryDeterministicOrNode.hpp  Branch.hpp  DecomposableAndNode.hpp  FalseNode.hpp  Node.hpp  TrueNode.hpp  UnaryNode.hpp
include/md4/options/branchingHeuristic/: OptionBranchingHeuristic.hpp  OptionPartialOrderHeuristic.hpp
include/md4/options/cache/: OptionBucketManager.hpp  OptionCacheCleaningManager.hpp  OptionCacheManager.hpp
include/md4/options/formulaManager/: OptionFormulaManager.hpp
include/md4/options/methods/: OptionDpllStyleMethod.hpp  OptionEREMethod.hpp  OptionMaxSharpSatMethod.hpp  OptionMethodManager.hpp  OptionMinSharpSatMethod.hpp  OptionOperationManager.hpp  OptionProjMcMethod.hpp  OptionQbfCounter.hpp
include/md4/options/preprocs/: OptionPreprocManager.hpp
include/md4/options/solvers/: OptionSolver.hpp
include/md4/partitioner/: PartitionerManager.hpp
include/md4/preprocs/: PreprocManager.hpp
include/md4/preprocs/circuit/: PreprocBasicCircuit.hpp
include/md4/problem/: CnfMatrix.hpp  ProblemManager.hpp
include/md4/solvers/: ActivityManager.hpp  PolarityManager.hpp  WrapperSolver.hpp
include/md4/treeDecomposition/: TreeDecomposition.hpp  TreeDecompositionPartition.hpp  TreeDecompositionTreeWidth.hpp
include/md4/treeDecompositioner/: TreeDecompositioner.hpp  TreeDecompositionerFlowCutter.hpp
include/md4/utils/: AtMost1Extractor.hpp  EquivExtractor.hpp  Parsing.hpp
src/caching/: DataInfo.cpp
src/caching/bucket/: BucketAllocator.cpp
src/configurations/: ConfigurationDpllStyleMethod.hpp
src/formulaManager/: FormulaManager.cpp
src/formulaManager/circuit/: CircuitManager.cpp  CircuitWithCnfManager.cpp
src/formulaManager/cnf/: CnfManager.cpp  CnfManagerDyn.cpp  CnfManagerDynBlockedCl.cpp  CnfManagerDynPure.cpp
src/heuristics/branchingHeuristic/: BranchingHeuristic.cpp  BranchingHeuristicClassic.cpp  BranchingHeuristicHybridPartialClassic.cpp  BranchingHeuristicLargeArity.cpp
src/heuristics/partialOrder/: PartialOrderHeuristic.cpp  PartialOrderHeuristicNone.cpp  PartialOrderHeuristicTreeDecomp.cpp
src/heuristics/phaseSelection/: PhaseHeuristic.cpp  PhaseHeuristicFalse.cpp  PhaseHeuristicPolarity.cpp  PhaseHeuristicTrue.cpp
src/heuristics/scoringVariable/: ScoringMethod.cpp
src/methods/: MethodManager.cpp  OperationManager.hpp  QueryManager.cpp
src/options/branchingHeuristic/: OptionBranchingHeuristic.cpp  OptionPartialOrderHeuristic.cpp
src/options/cache/: OptionCacheManager.cpp
src/options/methods/: OptionDpllStyleMethod.cpp  OptionEREMethod.cpp  OptionMaxSharpSatMethod.cpp  OptionMinSharpSatMethod.cpp  OptionOperationManager.hpp  OptionProjMcMethod.cpp  OptionQbfCounter.cpp
src/partitioner/: PartitionerManager.cpp  PartitionerPatoh.cpp
src/preprocs/: PreprocManager.cpp
src/preprocs/circuit/: PreprocBasicCircuit.cpp
src/preprocs/cnf/: PreprocBackboneCnf.cpp  PreprocBasicCnf.cpp  PreprocCompileEquiv.cpp  PreprocEquiv.cpp  PreprocReducer.cpp  PreprocSharpEquiv.cpp
src/problem/: ProblemManager.cpp  ProblemTypes.cpp
src/problem/circuit/: ParserCircuit.cpp  ProblemManagerCircuit.cpp
src/problem/cnf/: ParserDimacs.cpp  ParserErosionDimacs.cpp  ProblemManagerCnf.cpp  ProblemManagerErosionCnf.cpp
src/problem/qbf/: ParserQDimacs.cpp  ProblemManagerQbf.cpp
src/representation/graph/: Graph.cpp  GraphExtractor.cpp
src/representation/hypergraph/: HyperEdge.cpp  HyperGraph.cpp  HyperGraphExtractor.cpp
src/solvers/: ActivityManager.cpp  WrapperSolver.cpp
src/solvers/circuit/: WrapperCircuitGlucose.cpp  WrapperCircuitMinisat.cpp
src/solvers/cnf/: WrapperGlucose.cpp  WrapperMinisat.cpp
src/treeDecomposition/: TreeDecomposition.cpp  TreeDecompositionPartition.cpp  TreeDecompositionTreeWidth.cpp
src/treeDecompositioner/: TreeDecompositioner.cpp  TreeDecompositionerFlowCutter.cpp
src/utils/: AtMost1Extractor.cpp  EquivExtractor.cpp  Parsing.cpp
src/utils/cnf/: AndGatesExtractor.cpp
(+50 files in other folders)
